unpackaged/main/default/objects/FObjectFour__c/FObjectFour__c.object-meta.xml
<CustomObject>
    <description>An object used in Forccea test methods.</description>
    <label>FObjectFour</label>
    <nameField>
        <displayFormat>FO4-{00000}</displayFormat>
        <label>FObjectFour Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>FObjectFours</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>