unpackaged/main/default/objects/FObjectFour__c/fields/ForceeaPartition__c.field-meta.xml
<CustomField>
    <fullName>ForceeaPartition__c</fullName>
    <externalId>true</externalId>
    <label>ForceeaPartition</label>
    <length>10</length>
    <type>Text</type>
</CustomField>