unpackaged/main/default/objects/FObjectFour__c/fields/TestDecimal__c.field-meta.xml
<CustomField>
    <fullName>TestDecimal__c</fullName>
    <label>TestDecimal</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>