unpackaged/main/default/objects/FObjectFour__c/fields/TestLookupUser__c.field-meta.xml
<CustomField>
    <fullName>TestLookupUser__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>TestLookupUser</label>
    <referenceTo>User</referenceTo>
    <relationshipName>FObjectFours</relationshipName>
    <type>Lookup</type>
</CustomField>